--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stage-luxuryproperties",
+  "name": "stage-website-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
